--- a/frontend/components/tasks/tasksStyles.styl
+++ b/frontend/components/tasks/tasksStyles.styl
@@ -90,7 +90,7 @@
 				.expander
 					display flex
 					align-items center
-					justify-content end
+					justify-content flex-start
 					i
 						font-size 24px
 						cursor pointer
@@ -105,6 +105,8 @@
 				color black
 				margin-top 10px
 				padding-top 15px
+				.information_block
+					margin-bottom 35px
 				.task_itemLable
 					font-size 1.3em
 					.task_Participant
