--- a/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.template.pug
@@ -4,7 +4,7 @@
         ng-outlet
     section#two
       .checkins-info-container
-        checkins-info-component
+        right-panel-component
 
 
 
