--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -73,6 +73,8 @@
                 .img
                     width 64px
                 h3
+                    word-wrap break-word
+                    width 120px
                     font-size 1.6em
                     padding-top 15%
                     margin-top 0
