--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -12,7 +12,13 @@
       article.message-info
           a
             h3(ng-link='["EditMessage",{id:message._id}]') {{message.title}}
-          read-more(ng-bind-html="message.description")
+          .main
+            p(ng-if = "!message.isBigText",ng-bind-html="message.description")
+            p(ng-if = "message.isBigText",ng-bind-html="message.firstPart",id = "firstPart")
+            p(ng-if = "message.showFull",ng-bind-html="message.secondPart",id = "secondPart")
+            a(ng-if="!message.showFull && message.description.length > 300",ng-click="msgBoard.showText($index)") ...
+          hr
+          a(ng-click="msgBoard.hideText($index)",ng-if="message.showFull") Hide
           p.post-date {{message.date | date:"dd/MM/yyyy 'at' h:mma"}}
       .use-button
           div.fa.fa-files-o(ng-link='["File"]')
