--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -75,7 +75,7 @@
                 h3
                     word-wrap break-word
                     width 120px
-                    font-size 1.6em
+                    font-size 1.4em
                     padding-top 15%
                     margin-top 0
                     margin-bottom 0
@@ -103,6 +103,11 @@
                 margin-bottom 0
                 margin-top 5%
                 word-spacing: 10px;
+            a
+                display inline
+            .main
+                p
+                    display inline
         .use-button
             border-top-right-radius 20px
             border-bottom-right-radius 20px
