--- a/frontend/components/menu/menu-pug.component.pug
+++ b/frontend/components/menu/menu-pug.component.pug
@@ -5,34 +5,34 @@ aside.side-menu-wrapper
     nav#side-menu.side-menu
         ul
             li
-                a(ng-link='["MainPage"]')
+                a(ng-link='["MainPage"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-home.fa-2x
                     span.nav-text Home
             li
-                a(ng-link='["MsgBoard"]')
+                a(ng-link='["MsgBoard"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-television.fa-2x
                     span.nav-text Message Board
             li
-                a(ng-link='["Checkins"]')
+                a(ng-link='["Checkins"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-calendar-check-o.fa-2x
                     span.nav-text Check-ins
             li
-                a(ng-link='["Tasks"]')
+                a(ng-link='["Tasks"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-tasks.fa-2x
                     span.nav-text Tasks
             li
-                a(ng-link='["Events"]')
+                a(ng-link='["Events"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-calendar.fa-2x
                     span.nav-text Events
             li
-                a(ng-link='["Reports"]')
+                a(ng-link='["Reports"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-area-chart.fa-2x
                     span.nav-text Reports
             li
-                a(ng-link='["Drafts"]')
+                a(ng-link='["Drafts"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-pencil-square-o.fa-2x
                     span.nav-text Drafts
             li
-                a(ng-link='["Project"]')
+                a(ng-link='["Project"]',ng-click = "MenuCtrl.hideMenu()")
                     i.fa.fa-cogs.fa-2x
                     span.nav-text Settings
