--- a/frontend/components/checkins/checkinsEdit-pug.component.pug
+++ b/frontend/components/checkins/checkinsEdit-pug.component.pug
@@ -3,7 +3,7 @@
         .header-setup
             .close-btn
                 a(ng-link='["Checkins List"]')
-                    i.fa.fa-times.fa-2x
+                    .fa.fa-close.fa-3x.button
             h3 What question do you want to ask?
             input.question(type='text', ng-model="CheckEd.question" placeholder='Type your question...')
         .main-setup
@@ -20,10 +20,12 @@
             .schedule
                 select#schedule-first(ng-model='CheckEd.selectedFrequency', ng-options='item for item in CheckEd.frequency',
                  ng-selected="CheckEd.frequency[0]")
+
                 select#schedule-second(ng-model='CheckEd.selectedTime', ng-options='item for item in CheckEd.time',
                 ng-selected='CheckEd.time[0]')
-                a(ng-click="CheckEd.save()" )
-                    i.fa.fa-floppy-o.fa-3x
 
-                //div.use-button
-                //    div.save-button(ng-click="CheckEd.save()" ng-link='["Checkins List"]') Save
+                div.use-button
+                    div.save-button(ng-click="CheckEd.save()" ng-link='["Checkins List"]') Save
+
+                //a(ng-click="CheckEd.save()" )
+                //    i.fa.fa-floppy-o.fa-3x
