--- a/frontend/components/checkins/checkinsCreate-pug.component.pug
+++ b/frontend/components/checkins/checkinsCreate-pug.component.pug
@@ -3,7 +3,7 @@
         .header-setup
             .close-btn
                 a(ng-link='["Checkins List"]')
-                    i.fa.fa-times.fa-2x
+                    .fa.fa-close.fa-3x.button
             h3 What question do you want to ask?
             input.question(type='text', ng-model="CheckCr.question" placeholder='Type your question...')
         .main-setup
@@ -25,8 +25,8 @@
                 select#schedule-second(ng-model='CheckCr.selectedTime', ng-options='item for item in CheckCr.time',
                 ng-selected='CheckCr.time[0]')
 
-                a(ng-click="CheckCr.save()" )
-                    i.fa.fa-floppy-o.fa-3x
+                div.use-button
+                    div.save-button(ng-click="CheckCr.save()" ng-link='["Checkins List"]') Save
 
-                //div.use-button
-                //    div.save-button(ng-click="CheckCr.save()" ng-link='["Checkins List"]') Save
+                //a(ng-click="CheckCr.save()" )
+                //    i.fa.fa-floppy-o.fa-3x
