--- a/frontend/components/checkins/checkinsCreateStyles.styl
+++ b/frontend/components/checkins/checkinsCreateStyles.styl
@@ -5,7 +5,7 @@
         flex-flow row wrap
         justify-content center
         max-width 650px
-        height 500px
+        height 650px
         text-align center
         margin 0 auto
         background-color #f5f5f5
@@ -16,8 +16,8 @@
         i
             color #212121
 
-    .header-setup, .main-setup, .list
-        //- border-bottom 1px solid #adadad
+    .header-setup, .main-setup
+        //border-bottom 1px solid #adadad
 
     li
         list-style none
@@ -78,6 +78,7 @@
             color WHITE
             padding 1% 3% 1% 3%
             font-size 24px
+            width 100px
             height 45px
             transition 0.2s
             cursor pointer
@@ -107,16 +108,17 @@
         margin-right 30px
 
     .footer-setup
-        h3
-            height 20%
+        height 20%
+        //h3
+        //    height 20%
         .save-button
             margin 0px
             height 40px
 
     .schedule
-        display flex
-        justify-content center
-        align-items center
+        display inline-flex
+        //justify-content space-between
+        //align-items center
         select
             padding-top 2px
             border-radius 3px
@@ -124,17 +126,6 @@
             font-size 17px
             outline none
             margin 10px
-        a
-            display flex
-            justify-content center
-            //- align-items center
-    #schedule-first
-        height 30px
-        margin 0px 10px 0px 40px
-    #schedule-second
-        height 30px
-        margin 0px 10px 0px 10px
-
 
     .fa-floppy-o
         &:hover
