--- a/frontend/components/checkins/checkinsInfoStyles.styl
+++ b/frontend/components/checkins/checkinsInfoStyles.styl
@@ -23,9 +23,8 @@
         height 20%
         h2
             margin 0
-        i
-            color #212121
-            margin-left 5px
+        .fa
+            margin-left 10px
 
     .header-btn
         display flex
@@ -33,9 +32,9 @@
         margin 15px
 
     .close-btn
-        text-align right
-        margin-top 5px
-        margin-right 10px
+        //text-align right
+        margin-top -10px
+        margin-right -5px
 
     .control-btn
         margin 5px
@@ -58,6 +57,7 @@
             color #ffa502
 
     .fa-trash-o
+        cursor pointer
         &:hover
             color #f20000
 
