added checkins from db to main page

--- a/frontend/components/calendar/calendarMonth/calendarMonth.pug
+++ b/frontend/components/calendar/calendarMonth/calendarMonth.pug
@@ -34,6 +34,7 @@
                 th  Sun
             tr(ng-repeat='week in cm.weeks')
                 td(ng-repeat='day in week.days',
+					ng-click="cm.broadcastDate(day.date)",
                     ng-dblclick="cm.goto(day.date)",
                     ng-class="{'day-today': day.isToday, 'different-month': !day.isCurrentMonth}") {{day.number}}
 
