--- a/frontend/components/events/eventsStyles.styl
+++ b/frontend/components/events/eventsStyles.styl
@@ -47,5 +47,12 @@
                     padding-right 15px
                     p 
                         margin-top 0px
+        .avatar
+            background-color #f2992e
+            border-radius 5px
+            font-size 20px
+            padding 3px
+            margin 3px
+            text-transform: uppercase
                
           
