--- a/frontend/components/checkinsWrapper/checkinsWrapper.styl
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.styl
@@ -24,11 +24,77 @@ section
     &.resizable
         flex 0 0 400px
 #two
-    overflow-y scroll
     min-width 360px
+    min-height 80vh
+    max-hight 80vh
+    .checkins-info-container
+        width 100%
+        height 100%
+        right-panel-component
+            margin 2% 2%
+            display block
+            max-height 80vh
+            overflow-y auto
+            .checkinsList
+                padding-left 0
+                font-family 'Montserrat'
+                list-style-type: none
+                .checkin_title
+                    background-color #34495e
+                    color white
+                    text-align center
+                    border-radius 7px
+                li
+                    margin 1.3em 2em
+                    position relative
+                    &:before
+                        content ''
+                        position absolute
+                        height 5px
+                        background-color #34495e
+                        width 1.3em
+                        left -2em
+                        top 0.5em
+                        
+                .answer
+                    .user_name
+                        display inline-block
+                        -ms-transform: skewX(-15deg); /* IE 9 */
+                        -webkit-transform: skewX(-15deg); /* Safari */
+                        transform: skewX(-15deg); /* Standard syntax */
+                        width 75%
+                        font-size 1.2em
+                        background-color #f1c40f
+                        color #2c3e50
+                        padding 0 15px
+                    .creation_date
+                        display inline-block
+                        -ms-transform: skewX(-15deg); /* IE 9 */
+                        -webkit-transform: skewX(-15deg); /* Safari */
+                        transform: skewX(-15deg); /* Standard syntax */
+                        width 20%
+                        text-align center
+                        font-size 1.2em
+                        background-color #bdc3c7
+                        margin-left -5px
+                    .answer_text
+                        display block
+                        color #34495e
+                        margin-left 25px
+                        margin-top 10px
+                        font-size 1.2em
+            &::-webkit-scrollbar
+                width 10px
+            &::-webkit-scrollbar-track
+                background: none;
+            &::-webkit-scrollbar-thumb
+                background: #d3d3d3;
+                border-radius: 7px;
+
 #one
     min-width 364px
     min-height 80vh
+    max-hight 80vh
     background-color #f5f5f5
     ng-outlet
         width 100%
