--- a/frontend/directives/fileUpload/fileUpload.styl
+++ b/frontend/directives/fileUpload/fileUpload.styl
@@ -2,24 +2,43 @@
 .fileupload_wrapper
 	width 100%
 	.addFile
+		transition padding,height 0.5s ease-out
 		button()
+		overflow hidden
 		margin 25px auto
 		font-size 1.2em
 		padding 0 0.5em
-		display flex
-		flex-wrap nowrap
-		justify-content space-between
 		outline none
+		position relative
+		display inline-block
 		i
-			display inline
+			display inline-flex
 			font-size 1.2em
 			margin-right 0.5em
+			position relative
+			z-index 1
 		span
 			display: -moz-inline-stack;
-			display inline
+			display inline-flex
 			font-family "Montserrat"
 			font-size 1em
 			margin-left 0.5em
+			position relative
+			z-index 1
+		.button_background
+			background-color #1e824c
+			width 100%
+			position absolute
+			height 100%
+			left 0
+			top 0
+			z-index 0
+	.buttonDownload
+		padding 0 30%
+		height 25px
+		margin 37.5px auto
+		border-radius 0
+			
 	.file-Item
 		padding 5px 7px
 		.file-description
