--- a/frontend/components/checkinsWrapper/checkinsWrapper.styl
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.styl
@@ -47,14 +47,6 @@ section
                 li
                     margin 1.3em 2em
                     position relative
-                    &:before
-                        content ''
-                        position absolute
-                        height 5px
-                        background-color #34495e
-                        width 1.3em
-                        left -2em
-                        top 0.5em
                         
                 .answer
                     .user_name
@@ -64,19 +56,12 @@ section
                         transform: skewX(-15deg); /* Standard syntax */
                         width 75%
                         font-size 1.2em
-                        background-color #f1c40f
-                        color #2c3e50
+                        background-color #59ABE3
+                        color white
                         padding 0 15px
                     .creation_date
-                        display inline-block
-                        -ms-transform: skewX(-15deg); /* IE 9 */
-                        -webkit-transform: skewX(-15deg); /* Safari */
-                        transform: skewX(-15deg); /* Standard syntax */
-                        width 20%
-                        text-align center
-                        font-size 1.2em
-                        background-color #bdc3c7
-                        margin-left -5px
+                        display inline
+                        font-size 0.8em
                     .answer_text
                         display block
                         color #34495e
