--- a/frontend/components/rightPanel/panel-pug.component.pug
+++ b/frontend/components/rightPanel/panel-pug.component.pug
@@ -1,3 +1,3 @@
 ﻿ul.checkinsList(ng-repeat="checkin in rpanel.checkins") <h2 class="checkin_title">{{checkin.question}}</h2>
 	li(ng-repeat="answer in checkin.answers | filter: rpanel.checkinFilter()") 
-		.answer <span class="user_name">{{answer.user.firstName + ' '+ answer.user.lastName }}</span> <span class="creation_date">{{answer.creationDate | date: "HH:mm"}}</span> <span class="answer_text" ng-bind-html='answer.answer'></span>
+		.answer <span class="user_name">{{answer.user.firstName + ' '+ answer.user.lastName }} (<span class="creation_date">{{answer.creationDate | date: "HH:mm"}}</span>)</span>  <span class="answer_text" ng-bind-html='answer.answer'></span> 
