#59 - new header | #43 - modified style

--- a/frontend/components/checkins/checkinsInfoStyles.styl
+++ b/frontend/components/checkins/checkinsInfoStyles.styl
@@ -45,12 +45,13 @@
         text-align center
 
     .avatar
-        bottom 35px
-        margin 3px
         background-color #f2992e
         border-radius 5px
-        font-size 23px
-        padding .2em 0.2em
+        font-size 20px
+        padding 3px
+        margin 3px
+        text-transform uppercase
+        font-weight bold
 
     .fa-pencil-square-o
         &:hover
