--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -148,7 +148,7 @@
 
         ul.main
             margin-top -20px
-            text-align justify //or center
+            text-align center //or justify
 
         .question
             margin-right 25px
@@ -164,7 +164,8 @@
             font-size 20px
             padding 3px
             margin 3px
-            text-transform: uppercase
+            text-transform uppercase
+            font-weight bold
 
         .switch
             position relative
